src/test/deca/syntax/invalid/homemade/test/test_pars_inv_if_else_else.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 20 : Erreur (deux else avec un seul if précédent)
//    
//
// Historique:
//    cree le 04/01/2023

{
    x = 3;
    if (x < 5){
        println(x);
    }
    else {
        println("Hello");
        x = x+ 1;
    }
    else {
        println(x);
    }
    
}
